--- a/index.html
+++ b/index.html
@@ -49,5 +49,8 @@
         if you want to reach me, you can email me:
         <a href="mailto:larsen@ucsb.edu">here</a>
     </p>
+    git add index.html
+git commit -m "update site with imgur gifs"
+git push
 </body>
 </html>
