--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <h2>about me: larsen</h2>
 
     <!-- Clickable GIF #1 -->
-    <a href="giffy 2 copy.gif" target="_blank">
-        <img src="giffy 2 copy.gif" alt="photo of me gif"
+    <a href="https://i.imgur.com/yur3nzm.gif" target="_blank">
+        <img src="https://i.imgur.com/yur3nzm.gif" alt="photo of me gif"
              style="width:200px; height:400px;">
     </a>
 
@@ -27,8 +27,8 @@
     </p>
 
     <!-- Clickable GIF #2 -->
-    <a href="Gif2 copy.gif" target="_blank">
-        <img src="Gif2 copy.gif" alt="second gif"
+    <a href="https://i.imgur.com/wsW8Ojq.gif" target="_blank">
+        <img src="https://i.imgur.com/wsW8Ojq.gif" alt="second gif"
              style="width:200px; height:200px;">
     </a>
 
